--- a/mystyle.css
+++ b/mystyle.css
@@ -11,4 +11,18 @@ ul{
   margin: 0;
   padding: 0;
 }
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+a:active {
+    text-decoration: underline;
 
