--- a/mystyle.css
+++ b/mystyle.css
@@ -13,14 +13,17 @@ ul{
 }
 a:link {
     text-decoration: none;
+    color: black;
 }
 
 a:visited {
     text-decoration: none;
+    color: black;
 }
 
 a:hover {
     text-decoration: underline;
+    
 }
 
 a:active {
