--- a/mystyle.css
+++ b/mystyle.css
@@ -5,6 +5,7 @@ p{
   font-family: "Microsoft JhengHei Light";
   font-size: 90px;
   text-align: center;
+  color: black;
 }
 ul{
   list-style-type: none;
