--- a/mystyle.css
+++ b/mystyle.css
@@ -12,17 +12,17 @@ ul{
   margin: 0;
   padding: 0;
   width:300px;
-  background-color: #000;
+  background-color:#EEEEEE; 
   width: 100%;
 }
 li{
-  color:#EEEEEE;
+  color:#FFF;
   display:inline;
 }
 li a{
   display:block;
   width: 100px;
-  color: #EEEEEE;
+  color: #FFF;
   padding: 8px 10px 8px 10px;
   display:inline
 }
