--- a/mystyle.css
+++ b/mystyle.css
@@ -12,7 +12,7 @@ ul{
   margin: 0;
   padding: 0;
   width:300px;
-  background-color:#EEEEEE; 
+  background-color:#f1f1f1; 
   width: 100%;
 }
 li{
