--- a/mystyle.css
+++ b/mystyle.css
@@ -22,7 +22,8 @@ li{
 li a{
   display:block;
   width: 100px;
-  color: #FFF;
+  background-color: #555;
+  color: white;
   padding: 8px 10px 8px 10px;
   display:inline
 }
