--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #2196F3;
+  background-color: #FFF;
   font-family: "Microsoft JhengHei Light";
 }
 p{
@@ -13,10 +13,12 @@ ul{
   padding: 0;
   width:300px;
   background-color:#f1f1f1; 
-  width: 100%;
+     position: fixed;
+    top: 0;
+    width: 100%;
 }
 li{
-  color:#f1f1f1;
+  color:#FFF;
   display:inline;
 }
 li a{
