--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ p{
 ul{
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0px,10px,0px,10px;
   background-color:#f1f1f1; 
   position: fixed;
   top: 0;
