--- a/mystyle.css
+++ b/mystyle.css
@@ -24,7 +24,7 @@ li a{
   display:block;
   width: 100px;
   background-color: #f3f3f3;
-  color: white;
+  color: black;
   padding: 8px 10px 8px 10px;
   display:inline
 }
