--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,7 @@ ul{
   list-style-type: none;
   margin: 0;
   padding: 0px,10px,0px,10px;
-  background-color:#f3f3f3; 
+  background-color:#333; 
   position: fixed;
   top: 0;
   width: 100%;
