--- a/mystyle.css
+++ b/mystyle.css
@@ -23,7 +23,7 @@ li a{
   display:block;
   width: 100%;
   background-color: #333;
-  color: black;
+  color: white;
   padding: 8px 10px 8px 10px;
   display:inline
 }
