--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ p{
 ul{
   list-style-type: none;
   margin: 0;
-  padding: 0px,10px,0px,10px; 
+  padding: 14px,16px; 
   position: fixed;
   top: 0;
   width: 100%;
@@ -25,7 +25,6 @@ li a{
   width: 100%;
   background-color: #333;
   color: white;
-  padding: 0px 10px 8px 10px;
   display:inline
 }
 a:link {
