--- a/mystyle.css
+++ b/mystyle.css
@@ -26,6 +26,7 @@ li a{
   background-color: #333;
   color: white;
   display:inline
+  padding: 0px,0px,10px; 
 }
 a:link {
     text-decoration: none;
