--- a/mystyle.css
+++ b/mystyle.css
@@ -25,8 +25,8 @@ li a{
   width: 100%;
   background-color: #333;
   color: white;
-  display:inline
-  padding: 0px,0px,10px; 
+  display:inline-block;
+  
 }
 a:link {
     text-decoration: none;
