--- a/mystyle.css
+++ b/mystyle.css
@@ -10,22 +10,23 @@ p{
 ul{
   list-style-type: none;
   margin: 0;
-  padding: 14px,16px; 
   position: fixed;
   top: 0;
   width: 100%;
   background-color: #333;
+  overflow: hidden;
 }
 li{
   color:#f3f3f3;
-  display:inline-block;
+  float: left;
 }
 li a{
   display:block;
-  width: 100%;
   background-color: #333;
   color: white;
   display:inline-block;
+  text-align: center;
+  padding: 14px 16px; 
   
 }
 a:link {
