--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,7 @@ p{
 ul{
   list-style-type: none;
   margin: 0;
+  padding: 0;
   position: fixed;
   top: 0;
   width: 100%;
@@ -21,6 +22,7 @@ li{
   color:#f3f3f3;
   float: left;
   margin: 0;
+  padding: 0;
 }
 li a{
   margin: 0;
