--- a/mystyle.css
+++ b/mystyle.css
@@ -46,8 +46,8 @@ a:visited {
 }
 li a:hover {
    text-decoration: none;
-    color: #00C853;
-    background-color: #111;
+    color: #000;
+    background-color: #00C853;
 }
 
 a:hover {
