--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+.active{
+  background-color: #4FC3F7;
+}
 body{
   background-color: #FFF;
   font-family: "Microsoft JhengHei Light";
