--- a/mystyle.css
+++ b/mystyle.css
@@ -50,7 +50,7 @@ a:visited {
     text-decoration: none;
    
 }
-li a:hover {
+li :hover {
    text-decoration: none;
     color: #FFF;
     background-color: #00C853;
