--- a/mystyle.css
+++ b/mystyle.css
@@ -17,18 +17,15 @@ p{
 }
 ul{
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   position: fixed;
   top: 0;
   width: 100%;
   overflow: hidden;
   background-color:#333;
+  box-shadow: 10px 10px 5px grey;
 }
 li{
   float: left;
-  margin: 0;
-  padding: 0;
 }
 li a{
   margin: 0;
@@ -37,7 +34,6 @@ li a{
   display:inline-block;
   text-align: center;
   padding: 14px 16px; 
-  
 }
 
 a:link {
