--- a/mystyle.css
+++ b/mystyle.css
@@ -22,7 +22,7 @@ ul{
   width: 100%;
   overflow: hidden;
   background-color:#333;
-  box-shadow: 10px 10px 5px grey;
+  box-shadow: 1px 0px 5px #E0E0E0;
 }
 li{
   float: left;
