--- a/mystyle.css
+++ b/mystyle.css
@@ -22,7 +22,7 @@ ul{
   width: 100%;
   overflow: hidden;
   background-color:#333;
-  box-shadow: 100px 1px 5px 0px #D84315;
+  box-shadow: 0px 1px 5px 0px #9E9E9E;
 }
 li{
   float: left;
