--- a/mystyle.css
+++ b/mystyle.css
@@ -22,7 +22,7 @@ ul{
   width: 100%;
   overflow: hidden;
   background-color:#333;
-  box-shadow: 0px 3px 5px 0px #9E9E9E;
+  box-shadow: 0px 3px 5px 0px #616161;
 }
 li{
   float: left;
